--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "express": "^5.1.0",
     "mongoose": "^8.15.0",
     "multer": "^2.0.0",
-    "nodemon": "^3.1.10"
+    "nodemon": "^3.1.10",
+    "prop-types": "^15.8.1"
   }
 }
